--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     /* Hero Section */
     .hero {
-      background: url('https://via.placeholder.com/1600x900?text=Music+Quotes+Logo') no-repeat center center/cover;
+      background: url('https://i.postimg.cc/7PzrddMW/Music-Quotes-App-Logo.png') no-repeat center center/cover;
       height: 100vh;
       display: flex;
       justify-content: center;
